--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <h1>Titulos</h1>
-        <h2>Hola q haces</h2>
+        <h2>Hola q hacesxd</h2>
         <h3>que ondaaa</h3>
         <h4>oaaaaaaaaaa</h4>
     </body>
