--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
     </head>
     <body>
         <h1>Titulos</h1>
-        <h2>Hola q haces</h2>
+        <h2>Hola q hacesxd</h2>
         <h3>que ondaaa</h3>
         <h4>oaaaaaaaaaa</h4>
-    </body>
+        <h5>hola tonotos y tonotas</h5>
+        <img src="#" alt="Test Img" />    
+    <body>
 </html>
