se agrego y testeo video

--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
         <h4>oaaaaaaaaaa</h4>
         <h5>hola tonotos y tonotas</h5>
         <img src="#" alt="Test Img" />    
+        <video src="dog.mp4"></video>
     <body>
 </html>
